--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.23.1",
     "vue": "^2.7.16",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
